--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/solid-js": "^4.3.0",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.2",
     "astro-icon": "^1.1.0",
+    "solid-js": "^1.8.17",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
